[11.6] released ...
* The 'account' command was changed; its syntax and semantics are similar
  to the 'define' command now. This change is downwards compatible, and
  old 'account' definitions are still accepted.
* It is not an error to 'unset' an undefined variable from within a 'call'
  command or folder hook now.
* When a message in a multibyte character set like UTF-8 that was encoded
  as quoted-printable was printed and a multibyte character was separated
  by a '=' continued line, it was not decoded correctly.

[11.5] released 9/5/04
***************************************************************************
* A mailing list has been created to discuss future nail developments and *
* problem reports. If you like to participate, you can subscribe at       *
* <https://lists.sourceforge.net/lists/listinfo/nail-devel>. Regardless   *
* of your subscriber state, bug reports etc. should be sent to the list   *
* address <nail-devel@lists.sourceforge.net> from now on.                 *
***************************************************************************
* A new message addressing mode '(criteria)' is now available. It uses the
  IMAP SEARCH command if possible, and otherwise performs the equivalent
  actions locally. This addressing mode is of interest even for those people
  who do not use IMAP with nail because it adds powerful generic search
  methods, such as a way to search within message bodies.
* The 'folders' command now really works with IMAP accounts. It also accepts
  an argument to list the subfolders of a specific folder.
* The new 'headline' variable allows to customize the columns in the header
  summary.
* The new 'attrlist' variable allows to customize the attributes column in
  the header summary.
* The message flags 'Flagged' (F), 'Answered' (A), and 'Draft' (T) are now
  available, for IMAP mailboxes as well as for local folders. See the 'flag',
  'unflag', 'answered', 'unanswered', 'draft', and 'undraft' commands and the