@@ -2,8 +2,11 @@
 * The 'account' command was changed; its syntax and semantics are similar
   to the 'define' command now. This change is downwards compatible, and
   old 'account' definitions are still accepted.
+* If the account listing generated by the 'account' commands without an
+  argument exceeds the screen height, the pager is invoked now.
 * It is not an error to 'unset' an undefined variable from within a 'call'
   command or folder hook now.
+* A 'defines' command was added to print the currently defined macros.
 * When a message in a multibyte character set like UTF-8 that was encoded
   as quoted-printable was printed and a multibyte character was separated
   by a '=' continued line, it was not decoded correctly.
